--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,6 +30,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add events.csv report.html events.ics
+          git add events.csv report.html index.html events.ics
           git commit -m "Automated update from GitHub Actions" || echo "No changes"
           git push
